fix: module[demo-java-annotationProcessor]